deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-node-app
  namespace: dev  # This deploys the pods into the dev namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-node-app
  template:
    metadata:
      labels:
        app: my-node-app
    spec:
      containers:
      - name: my-node-app
        image: 637423201169.dkr.ecr.us-east-2.amazonaws.com/my-node-app:latest
        ports:
        - containerPort: 3000
