service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app-service
  namespace: dev  # Add the namespace here
spec:
  type: LoadBalancer
  selector:
    app: my-node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  externalTrafficPolicy: Cluster
