qa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qa-ingress
  namespace: qa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: qa.nodejs.my.node.app.deepak2828.com
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: my-node-app-service
            port:
              number: 3000
